Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
 
 <body>
 
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5ad89179bba9553560e985b3-292.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YWQ5NWVmNmY5M2Y5NDFiY2M1MDE4MjkiLCJub21icmUiOiJ0ZXN0MSIsImVtYWlsIjoidGVzdDFAaG90bWFpbC5jb20iLCJfX3YiOjB9LCJpYXQiOjE1MjQyNzU3MzEsImV4cCI6MTUyNDQ0ODUzMX0.L1aXLOfB6g6W0xTlWTyQ6_ia0Q_tGS9LYG4SY5dkXog"> -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <a href="#" onclick="signOut();">Sign out</a>
